--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Document</title>
 </head>
+
 <body>
     <header></header>
     <section>
         <div>
-            <!-- FORMS AQUI -->
-             <form></form>
+            <form>
+                <label for="nome1">Nome</label>
+                <input type="text" id="nome1" name="nome1">
+
+                <label for="nome2">Nome</label>
+                <input type="text" id="nome2" name="nome2">
+
+                <label for="nome3">Nome</label>
+                <input type="text" id="nome3" name="nome3">
+
+                <label for="nome4">Nome</label>
+                <input type="text" id="nome4" name="nome4">
+
+                <label for="nome5">Nome</label>
+                <input type="text" id="nome5" name="nome5">
+
+                <label for="historia">História do Grupo</label>
+                <textarea id="historia" name="historia" rows="5"></textarea>
+            </form>
         </div>
     </section>
 </body>
+
 </html>
