--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <header></header>
+    <header class="header-section"></header>  
     <section>
-        <div>
+        <div class="container-form">
             <form>
                 <label for="nome1">Nome</label>
                 <input type="text" id="nome1" name="nome1">
@@ -32,6 +32,7 @@
                 <textarea id="historia" name="historia" rows="5"></textarea>
             </form>
         </div>
+        
     </section>
 </body>
 
