--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header class="header-section"></header>  
+    <header class="header-section"></header>
     <section>
         <div class="container-form">
             <form>
@@ -30,10 +31,14 @@
 
                 <label for="historia">História do Grupo</label>
                 <textarea id="historia" name="historia" rows="5"></textarea>
+
+                <button type="submit">Enviar</button>
             </form>
         </div>
-        
+
     </section>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
