--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,12 @@
     <header class="header-section"></header>  
     <section>
         <div class="container-form">
-            <form>
+            <div>
+                <h1>POSTECH - FULLSTACK</h1>
+                <p class="">Desafio aula inaugural</p>
+            </div>
+            <form class="form">
+                <p>Informações do grupo</p>
                 <label for="nome1">Nome</label>
                 <input type="text" id="nome1" name="nome1">
 
