--- a/src/index.html
+++ b/src/index.html
@@ -22,26 +22,26 @@
                 <p class="">Desafio aula inaugural</p>
             </div>
             <form class="form">
-                <p>Informações do grupo</p>
+                <p class="form-title">Informações do grupo</p>
                 <label for="nome1">Nome</label>
-                <input type="text" id="nome1" name="nome1">
+                <input type="text" id="nome1" name="nome1" class="form-input">
 
                 <label for="nome2">Nome</label>
-                <input type="text" id="nome2" name="nome2">
+                <input type="text" id="nome2" name="nome2" class="form-input">
 
                 <label for="nome3">Nome</label>
-                <input type="text" id="nome3" name="nome3">
+                <input type="text" id="nome3" name="nome3" class="form-input">
 
                 <label for="nome4">Nome</label>
-                <input type="text" id="nome4" name="nome4">
+                <input type="text" id="nome4" name="nome4" class="form-input">
 
                 <label for="nome5">Nome</label>
-                <input type="text" id="nome5" name="nome5">
+                <input type="text" id="nome5" name="nome5" class="form-input">
 
                 <label for="historia">História do Grupo</label>
-                <textarea id="historia" name="historia" rows="5"></textarea>
+                <textarea id="historia" name="historia" rows="5" class="form-input"></textarea>
 
-                <button type="submit">Enviar</button>
+                <button class="button-submit" type="submit">Enviar</button>
             </form>
         </div>
 
