--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
                 <input type="text" id="nome5" name="nome5" class="form-input">
 
                 <label for="historia">História do Grupo</label>
-                <textarea id="historia" name="historia" rows="5" class="form-input"></textarea>
+                <textarea id="historia" name="historia" rows="5"></textarea>
 
                 <button class="button-submit" type="submit">Enviar</button>
             </form>
